--- a/src/pages/Donation/donation.scss
+++ b/src/pages/Donation/donation.scss
@@ -227,6 +227,15 @@
         }
       }
     }
+    .join_team_section {
+      width: 100%;
+      padding: 96px calc((100% - 1500px) / 2);
+      padding-top: 0;
+      .join_team_wrapper {
+        width: 100%;
+        height: 380px;
+      }
+    }
   }
 }
 
@@ -240,6 +249,10 @@
     padding-right: 25px;
   }
   .donation_page .donation_wrapper .donation_usage_section {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .donation_page .donation_wrapper .join_team_section {
     padding-left: 25px;
     padding-right: 25px;
   }
@@ -428,6 +441,9 @@
     .usage_body {
     width: calc(100% - 340px);
   }
+  .donation_page .donation_wrapper .join_team_section .join_team_wrapper {
+    height: 340px;
+  }
 }
 @media (max-width: 950px) {
   .donation_page .donation_wrapper .donating_section .donating_section_body {
@@ -594,6 +610,13 @@
     font-size: 35px;
     line-height: 42px;
   }
+  .donation_page .donation_wrapper .join_team_section {
+    padding: 45px 15px;
+    padding-top: 0;
+  }
+  .donation_page .donation_wrapper .join_team_section .join_team_wrapper {
+    height: 280px;
+  }
 }
 @media (max-width: 700px) {
   .donation_page .donation_wrapper .donating_section {
@@ -672,6 +695,10 @@
     padding-bottom: 35px;
   }
   .donation_page .donation_wrapper .donation_usage_section {
+    padding: 35px 10px;
+    padding-top: 0;
+  }
+  .donation_page .donation_wrapper .join_team_section {
     padding: 35px 10px;
     padding-top: 0;
   }
