--- a/src/pages/Donation/donation.scss
+++ b/src/pages/Donation/donation.scss
@@ -511,6 +511,28 @@
   }
   .donation_page
     .donation_wrapper
+    .donating_section
+    .donating_section_body::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 3px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donating_section
+    .donating_section_body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+  }
+  .donation_page
+    .donation_wrapper
+    .donating_section
+    .donating_section_body::-webkit-scrollbar-thumb {
+    background-color: rgba(#000, 0.7);
+    outline: none;
+    border-radius: 3px;
+  }
+  .donation_page
+    .donation_wrapper
     .contributing_section
     .contributing_wrapper
     .contributing_info
@@ -526,6 +548,31 @@
     max-height: 230px;
     overflow-y: auto;
     padding-right: 15px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 3px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+  }
+  .donation_page
+    .donation_wrapper
+    .contributing_section
+    .contributing_wrapper
+    .contributing_info::-webkit-scrollbar-thumb {
+    background-color: rgba(#000, 0.7);
+    outline: none;
+    border-radius: 3px;
   }
 }
 @media (max-width: 850px) {
